# signal-gen-cjds66

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md  build-asm.sh  clap.yaml  doc-lib.bat  doc-lib.sh  doc.bat  doc.sh  run-basic-usage.bat  run-basic-usage.sh  run-debug.bat  run-debug.sh  run.bat  run.sh  test.bat  test.sh
.github/: FUNDING.yml
.github/workflows/: rust.yml
examples/: audio-to-wavecad.sh  clear-user-waves.sh  custom-waveform1.wav.txt  custom-waveform1.wav.wmi  custom-waveform2.wav.txt  custom-waveform3.wav.txt  defcronyke-sunlink-16bit-8000hz-wavecad.txt  defcronyke-sunlink-16bit-wavecad.txt  load-crypto-random-waves.sh  load-random-waves.sh  read.sh  write.sh
scripts/: build-examples.bat  build-examples.sh  build-obj.sh  build.sh  doc-lib.bat  doc.sh  kcov.sh  run.bat  run.sh  test.bat  test.sh
signal-gen-cjds66-lib/: Cargo.toml  LICENSE.md  README.md  build-examples.sh  run-basic-usage.bat  run-basic-usage.sh  test.bat  test.sh
signal-gen-cjds66-lib/examples/: basic-usage.rs
signal-gen-cjds66-lib/scripts/: build-examples.bat  test.bat  test.sh
signal-gen-cjds66-lib/src/: command.rs  command_test.rs  error.rs  lib.rs  protocol.rs  serial.rs  serial_test.rs  util.rs
src/: main.rs
tools/: audio-to-wavecad.sh  read.sh  write.sh
