[package]
name = "signal-gen-cjds66"
version = "0.0.1"
authors = ["Jeremy Carter <jeremy@jeremycarter.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
# The main library for this project.
signal-gen-cjds66-lib = { path = "signal-gen-cjds66-lib", version = "0.0" }

# For parsing command line arguments and subcommands.
clap = "2.33"
