# Copyright © 2020-2021 Jeremy Carter <jeremy@jeremycarter.ca>
#
# By using this software, you agree to the LICENSE TERMS 
# outlined in the file titled LICENSE.md contained in the 
# top-level directory of this project. If you don't agree
# to the LICENSE TERMS, you aren't allowed to use this
# software.

[package]
name = "signal-gen-cjds66-lib"
version = "0.1.1"
authors = ["Jeremy Carter <jeremy@jeremycarter.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4"
bitflags = "1.2"
clap = { version = "2.33", features = ["yaml"] }
phf = { version = "0.8", features = ["macros"] }
byteorder = "1.3.4"
