# Copyright © 2020-2021 Jeremy Carter <jeremy@jeremycarter.ca>
#
# By using this software, you agree to the LICENSE TERMS 
# outlined in the file titled LICENSE.md contained in the 
# top-level directory of this project. If you don't agree
# to the LICENSE TERMS, you aren't allowed to use this
# software.

[package]
name = "signal-gen-cjds66-lib"
version = "0.1.3"
authors = ["Jeremy Carter <jeremy@jeremycarter.ca>"]
edition = "2018"
description = "An unofficial support library which can fully remote control the inexpensive Koolertron DDS Signal Generator known as GH-CJDS66."
documentation = "https://docs.rs/signal_gen_cjds66_lib"
readme = "README.md"
homepage = "https://gitlab.com/defcronyke/signal-gen-cjds66"
repository = "https://gitlab.com/defcronyke/signal-gen-cjds66"
license-file = "LICENSE.md"
keywords = ["signal", "generator", "arbitrary", "waveform", "GH-CJDS66"]
categories = ["hardware-support", "mathematics", "science", "multimedia", "embedded"]
# publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false   # Disable running the doc tests.

[dependencies]
serial = "0.4"
bitflags = "1.2"
clap = { version = "2.33", features = ["yaml"] }
phf = { version = "0.8", features = ["macros"] }
byteorder = "1.3.4"
